--- a/.cs50.yml
+++ b/.cs50.yml
@@ -1,8 +1,6 @@
 lab50:
   files:
-    - !exclude "*"
-    - !include "*.java"
-    - !include "*.class"
+    - !include "*"
   window:
     - readme
     - terminal
